[workspace]
resolver = "2"
members = [
    "aya-network-monitor",
    "aya-network-monitor-common",
    "aya-network-monitor-ebpf",
]
default-members = ["aya-network-monitor", "aya-network-monitor-common"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"

[workspace.dependencies]
aya = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-build = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-log = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }

anyhow = { version = "1.0", default-features = false, features = ["std"] }
cargo_metadata = { version = "0.23", default-features = false }
# `std` feature is currently required to build `clap`.
#
# See https://github.com/clap-rs/clap/blob/61f5ee5/clap_builder/src/lib.rs#L15.
clap = { version = "4.5", default-features = false, features = ["std", "derive"] }
env_logger = { version = "0.11", default-features = false, features = ["humantime"] }
libc = { version = "0.2", default-features = false }
log = { version = "0.4", default-features = false }
tokio = { version = "1.49", default-features = false, features = ["full"] }
which = { version = "8", default-features = false }

[profile.release.package.aya-network-monitor-ebpf]
debug = 2
codegen-units = 1
