[package]
name = "aya-network-monitor-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
aya-network-monitor-common = { path = "../aya-network-monitor-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "aya-network-monitor"
path = "src/main.rs"
